# fika

./: .gitignore  docker-compose.yaml  logging.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml  test_proxy.py
.github/workflows/: pre-commit.yaml
src/: config_schema.py
src/bot/: app.py  daily_report.py  db.py  dispatcher.py  filters.py  openai_repository.py  pdf_report.py  plotting.py  toweco_repository.py  utils.py  waiter_repository.py
src/bot/routers/: admin.py  commands.py  waiter.py
