[tool.poetry]
name = "fika"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
aiogram-dialog = "^2.4.0"
chatgpt-md-converter = "^0.3.12"
colorlog = "^6.10.1"
matplotlib = "^3.10.8"
openai = "^2.14.0"
pandas = "^2.3.3"
pre-commit = "^4.5.1"
pydantic = "^2.11.10"
pyyaml = "^6.0.3"
redis = "^7.1.0"
ruff = "^0.14.10"
reportlab = "^4.4.7"
pillow = "^12.0.0"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
